repos/makepy/contents/test/fail/Error.rules
# Error
error "Everything is terrible"

all:
    print("Succeed")
